# rust_kafka

./: Cargo.toml
consumer/: .env  Cargo.toml
consumer/src/: main.rs
models/: Cargo.toml
models/migrations/: 0001_trucks_table.sql
models/src/: lib.rs  main.rs
producer/: .env  Cargo.toml
producer/src/: main.rs
