[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
kafka = "0.10.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
tokio = { version = "1.33.0", features = ["full"] }
models = {path = "../models"}
